--- a/.gitignore
+++ b/.gitignore
@@ -1,92 +1,28 @@
-# ============ IntelliJ IDEA ============
+# IDEA 的文件（不要上传）
 .idea/
 *.iml
-*.ipr
-*.iws
-.idea_modules/
 
-# 但可以保留以下重要配置（可选）
-# !.idea/codeStyles/
-# !.idea/inspectionProfiles/
-
-# ============ Gradle ============
+# Gradle 编译文件（不要上传）
 .gradle/
 build/
 out/
 bin/
-classes/
-generated/
 
-# 构建产物
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar
-*.tar.gz
-*.rar
-
-# Gradle 包装器
-!gradle/wrapper/gradle-wrapper.jar
-gradle/wrapper/gradle-wrapper.properties.backup
-
-# Gradle 缓存
-.gradle/caches/
-.gradle/daemon/
-.gradle/native/
-.gradle/wrapper/dists/
-.gradle/loom-cache/
-
-# ============ Minecraft 开发 ============
+# Minecraft 运行文件（不要上传）
 run/
 logs/
 crash-reports/
-debug/
-local/
 
-# 客户端配置
-options.txt
-optionsof.txt
-usercache.json
-usernamecache.json
-
-# 世界和地图数据
-saves/
-world/
-worlds/
-DIM*/
-stats/
-
-# ============ 操作系统文件 ============
+# 操作系统的临时文件（不要上传）
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 desktop.ini
-*.lnk
 
-# ============ 临时文件 ============
+# 编译出来的 jar 文件（不要上传）
+*.jar
+*.zip
+
+# 临时文件（不要上传）
 *.log
-*.log.*
-*.pid
-*.seed
-*.pid.lock
-*.bak
 *.tmp
-*.temp
-*.swp
-*.swo
-*~
-.cache/
-*.cache
-
-# ============ 其他 ============
-*.dll
-*.so
-*.dylib
-.env
-local.properties
+*.bak
