--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loom.platform=forge
 
 # Minecraft
 minecraft_version=1.20.1
-forge_version=47.3.7
+forge_version=47.4.10
 parchment_mappings=2023.09.03
 quilt_mappings=23
 
@@ -25,9 +25,8 @@ mod_name=GTL Endless
 mod_authors=ForiLusa
 mod_license=MIT
 mod_description=This is a derivative mod created for the GTL modpack.
+mod_url=https://github.com/BlackDawnNova/gtlendless
 
-mod_url=https://github.com/forilusa/gtlendless
-mod_author=ForiLusa
 
 # ????
 gtceu_version=1.4.4
@@ -44,9 +43,6 @@ resourcefullib_version=2.1.29
 resourcefulconfig_version=2.1.2
 kubejs_version=2001.6.4-build.120
 
-
-# gtlcore_version=1.2.2.6-fix2
-# glodium_version=1.20-1.5
 extendedae_version=1.4.5
 merequester_version=1.1.5
 libx_version=5.0.14
