--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -48,3 +48,10 @@ mandatory = false
 versionRange = "[1.2.2.5,)"
 ordering = "AFTER"
 side = "BOTH"
+
+[[dependencies.gtlendless]]
+modId = "geckolib"
+mandatory = true
+versionRange = "[4.4,)"
+ordering = "NONE"
+side = "BOTH"
