--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loom.platform=forge
 
 # Minecraft
 minecraft_version=1.20.1
-forge_version=47.4.10
+forge_version=47.4.13
 parchment_mappings=2023.09.03
 quilt_mappings=23
 
@@ -29,10 +29,11 @@ mod_url=https://github.com/BlackDawnNova/gtlendless
 
 
 # ????
+geckolib_version=4.4
 gtceu_version=1.4.4
 ldlib_version=1.0.29
 registrate_version=MC1.20-1.3.11
-jei_version=15.20.0.116
+jei_version=15.20.0.127
 configuration_version=3.1.0
 mixinextras_version=0.5.0
 jade_version=11.9.2
