--- a/settings.gradle
+++ b/settings.gradle
@@ -2,13 +2,9 @@ pluginManagement {
 
 
     repositories {
-        maven { url "https://maven.fabricmc.net/" }
-        maven { url "https://maven.architectury.dev/" }
         maven { url "https://files.minecraftforge.net/maven/" }
+        maven { url = 'https://maven.neoforged.net/releases' }
         gradlePluginPortal()
-    }
-    plugins {
-        id 'org.jetbrains.kotlin.jvm' version '2.0.0'
     }
 }
 
