--- a/build.gradle
+++ b/build.gradle
@@ -115,14 +115,22 @@ legacyForge {
 def modrinthMods = [
 ]
 def curseMods = [
+        "appliedenergistics2-forge-223794:7148487",
+        "guideme-forge-1173950:7127447",
+        "jade-1.20.1-324717:6855440"
 ]
 dependencies {
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
-    modImplementation("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+    modImplementation ("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+    jarJar("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}") {
+        version {
+            strictly geckolib_version
+        }
+    }
     // https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine
     implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
-// GTCEu
+    // GTCEu
     modImplementation "com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}"
     modImplementation "dev.toma.configuration:configuration-${minecraft_version}:${configuration_version}-forge"
 
@@ -138,7 +146,7 @@ dependencies {
     }
     curseMods.each { dep ->
         modImplementation "curse.maven:$dep-deobf"
-        exportModJarsConfig "curse.maven:$dep"
+        //exportModJarsConfig "curse.maven:$dep"
     }
 
     // JEI
